add GitHub repositories

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Team Project For MBAN2 Group 3\n",
     "# Course: Python for Data Analysts: Methods & Tools - DAT-7466 - BMBAN2\n",
+    "# GitHub repositories: https://github.com/HarryYang1008/A2_python\n",
     "\n",
     "# Group Members:\n",
     "#   Weikang Yang\n",
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +438,7 @@
     }
    ],
    "source": [
-    "# Check the Data structure for orders.pickle\n",
+    "# Check the Data structure for orders.pickle \n",
     "db_items.head()"
    ]
   },
