--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
     "db_order7 =pd.read_pickle('orders_7.pickle')\n",
     "\n",
     "# remove the MAIN BASE SIDE_1 and SIDE_2 in the database with .drop([]'column name'])\n",
-    "# because it's already have the description imformation in later column\n",
+    "# because it's already have the description information in later column\n",
     "db_order7 = db_order7.drop(columns=['MAIN'])\n",
     "db_order7 = db_order7.drop(columns=['BASE'])\n",
     "db_order7 = db_order7.drop(columns=['SIDE_1'])\n",
@@ -1861,9 +1861,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weika\\AppData\\Local\\Temp\\ipykernel_44660\\269303589.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  db_order7_sub['SIDE_NAME'] = db_order7_sub[['SIDE_1_NAME', 'SIDE_2_NAME']].apply(  # combine the side_1 and side_2 in the same column\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Restaurant</th>\n",
+       "      <th>Most Popular Main</th>\n",
+       "      <th>Most Popular Base</th>\n",
+       "      <th>Most Popular Side</th>\n",
+       "      <th>Most Popular Drink</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bryant Park</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Columbia</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Flatiron</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Midtown</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NYU</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Upper East Side</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Upper West Side</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Restaurant                Most Popular Main      Most Popular Base  \\\n",
+       "0      Bryant Park       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "1         Columbia  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "2         Flatiron  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "3          Midtown       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "4              NYU       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "5  Upper East Side       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "6  Upper West Side       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "7     Williamsburg  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "\n",
+       "        Most Popular Side  Most Popular Drink  \n",
+       "0  Roasted Sweet Potatoes                 0.0  \n",
+       "1  Roasted Sweet Potatoes                 0.0  \n",
+       "2  Roasted Sweet Potatoes                 0.0  \n",
+       "3  Roasted Sweet Potatoes                 0.0  \n",
+       "4  Roasted Sweet Potatoes                 0.0  \n",
+       "5  Roasted Sweet Potatoes                 0.0  \n",
+       "6  Roasted Sweet Potatoes                 0.0  \n",
+       "7  Roasted Sweet Potatoes                 0.0  "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LIST OUT THE COLUMN THAT WE NEED FOR ANALYSIS \n",
     "columns_to_analyze = ['RESTAURANT_NAME', 'MAIN_NAME', 'BASE_NAME', 'SIDE_1_NAME', 'SIDE_2_NAME', 'DRINKS']\n",
@@ -1908,9 +2044,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Most Popular Main</th>\n",
+       "      <th>Most Popular Base</th>\n",
+       "      <th>Most Popular Side</th>\n",
+       "      <th>Most Popular Drink</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-02</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-03</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-04</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-05</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-06</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-07</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-08</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>Herb Roasted Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2018-11</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2018-12</td>\n",
+       "      <td>Charred Chicken Marketbowl</td>\n",
+       "      <td>Farm Greens with Mint</td>\n",
+       "      <td>Roasted Sweet Potatoes</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Month                Most Popular Main      Most Popular Base  \\\n",
+       "0   2018-01  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "1   2018-02  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "2   2018-03  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "3   2018-04       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "4   2018-05       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "5   2018-06  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "6   2018-07       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "7   2018-08  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "8   2018-09  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "9   2018-10  Herb Roasted Chicken Marketbowl  Farm Greens with Mint   \n",
+       "10  2018-11       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "11  2018-12       Charred Chicken Marketbowl  Farm Greens with Mint   \n",
+       "\n",
+       "         Most Popular Side  Most Popular Drink  \n",
+       "0   Roasted Sweet Potatoes                 0.0  \n",
+       "1   Roasted Sweet Potatoes                 0.0  \n",
+       "2   Roasted Sweet Potatoes                 0.0  \n",
+       "3   Roasted Sweet Potatoes                 0.0  \n",
+       "4   Roasted Sweet Potatoes                 0.0  \n",
+       "5   Roasted Sweet Potatoes                 0.0  \n",
+       "6   Roasted Sweet Potatoes                 0.0  \n",
+       "7   Roasted Sweet Potatoes                 0.0  \n",
+       "8   Roasted Sweet Potatoes                 0.0  \n",
+       "9   Roasted Sweet Potatoes                 0.0  \n",
+       "10  Roasted Sweet Potatoes                 0.0  \n",
+       "11  Roasted Sweet Potatoes                 0.0  "
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ---------------------- THE MOST POPULAR ITEM BY MONTH --------------------------\n",
     "\n",
@@ -1949,6 +2249,16 @@
     "\n",
     "# SHOW THE RESULT\n",
     "monthly_result_df # return the data frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chat GPT referance:\n",
+    "#### https://chatgpt.com/share/67525205-c288-8008-a134-8729b0317bad\n",
+    "#### https://chatgpt.com/share/67525244-abc4-8008-8f43-734ded2e81d8\n",
+    "#### https://chatgpt.com/share/6752525f-bcb0-8008-86a0-92842fdc16ff"
    ]
   }
  ],
